# european_football_analysis

./: README.md  pyproject.toml
notebook/: EDA_profiles.ipynb  EDA_stats.ipynb  data_merging.ipynb
notebook/data/processed/: cleaned_data.csv  cleaned_profiles.csv  cleaned_stats.csv
notebook/data/raw/: all_player_profiles.csv  all_player_stats.csv
scripts/: analysis_queries.sql  load_to_postgres.py
